Replace all icon instances with igx-icon instead of directly using the material-icons font.

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -9,92 +9,92 @@
                     <span class="nav-item header">Components</span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/avatar">
-                        <i class="material-icons">account_circle</i>
+                        <igx-icon fontSet="material" name="account_circle"></igx-icon>
                         <span>Avatar</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/badge">
-                        <i class="material-icons">error</i>
+                        <igx-icon fontSet="material" name="error"></igx-icon>
                         <span>Badge</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/buttonGroup">
-                        <i class="material-icons">group_work</i>
+                        <igx-icon fontSet="material" name="group_work"></igx-icon>
                         <span>Button Group</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/calendar">
-                        <i class="material-icons">event</i>
+                        <igx-icon fontSet="material" name="event"></igx-icon>
                         <span>Calendar</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/card">
-                        <i class="material-icons">home</i>
+                        <igx-icon fontSet="material" name="home"></igx-icon>
                         <span>Card</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/carousel">
-                        <i class="material-icons">view_carousel</i>
+                        <igx-icon fontSet="material" name="view_carousel"></igx-icon>
                         <span>Carousel</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/grid">
-                        <i class="material-icons">view_column</i>
+                        <igx-icon fontSet="material" name="view_column"></igx-icon>
                         <span>Grid</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/dialog">
-                        <i class="material-icons">all_out</i>
+                        <igx-icon fontSet="material" name="all_out"></igx-icon>
                         <span>Dialog</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/inputs">
-                        <i class="material-icons">web</i>
+                        <igx-icon fontSet="material" name="web"></igx-icon>
                         <span>Forms</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/icon">
-                        <i class="material-icons">android</i>
+                        <igx-icon fontSet="material" name="android"></igx-icon>
                         <span>Icon</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/list">
-                        <i class="material-icons">list</i>
+                        <igx-icon fontSet="material" name="list"></igx-icon>
                         <span>List</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/navbar">
-                        <i class="material-icons">arrow_back</i>
+                        <igx-icon fontSet="material" name="arrow_back"></igx-icon>
                         <span>Navbar</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/navdrawer">
-                        <i class="material-icons">menu</i>
+                        <igx-icon fontSet="material" name="menu"></igx-icon>
                         <span>Navdrawer</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/progressbar">
-                        <i class="material-icons">poll</i>
+                        <igx-icon fontSet="material" name="poll"></igx-icon>
                         <span>Progress Indicators</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/slider">
-                        <i class="material-icons">linear_scale</i>
+                        <igx-icon fontSet="material" name="linear_scale"></igx-icon>
                         <span>Slider</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/snackbar">
-                        <i class="material-icons">feedback</i>
+                        <igx-icon fontSet="material" name="feedback"></igx-icon>
                         <span>Snackbar</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/tabbar">
-                        <i class="material-icons">tab</i>
+                        <igx-icon fontSet="material" name="tab"></igx-icon>
                         <span>Tabbar</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/toast">
-                        <i class="material-icons">android</i>
+                        <igx-icon fontSet="material" name="android"></igx-icon>
                         <span>Toast</span>
                     </span>
 
@@ -102,12 +102,12 @@
                     <span class="nav-item header">Directives</span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/buttons">
-                        <i class="material-icons">radio_button_unchecked</i>
+                        <igx-icon fontSet="material" name="radio_button_unchecked"></igx-icon>
                         <span>Buttons</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/ripple">
-                        <i class="material-icons">wifi_tethering</i>
+                        <igx-icon fontSet="material" name="wifi_tethering"></igx-icon>
                         <span>Ripple</span>
                     </span>
 
@@ -115,7 +115,7 @@
                     <span class="nav-item header">Utils</span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/data-operations">
-                        <i class="material-icons">data_usage</i>
+                        <igx-icon fontSet="material" name="data_usage"></igx-icon>
                         <span>Data Operations</span>
                     </span>
 
@@ -123,15 +123,15 @@
                     <span class="nav-item header">Style</span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/colors">
-                        <i class="material-icons">color_lens</i>
+                        <igx-icon fontSet="material" name="color_lens"></igx-icon>
                         <span>Colors</span>
                     </span>
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/typography">
-                        <i class="material-icons">font_download</i>
+                        <igx-icon fontSet="material" name="font_download"></igx-icon>
                         <span>Typography</span>
                     </span>
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/shadows">
-                        <i class="material-icons">layers</i>
+                        <igx-icon fontSet="material" name="layers"></igx-icon>
                         <span>Shadows</span>
                     </span>
                 </nav>
