--- a/demos/app/button/sample.component.html
+++ b/demos/app/button/sample.component.html
@@ -78,48 +78,48 @@
             <div class="buttons-sample">
                 <div class="button-sample">
                     <button igxButton="fab" igxRipple="white">
-                <i class="material-icons">favorite</i>
-                </button>
+                        <igx-icon fontSet="material" name="favorite"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="fab" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">
-                    <i class="material-icons">edit</i>
-                </button>
+                        <igx-icon fontSet="material" name="edit"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="fab" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">
-                    <i class="material-icons">add</i>
-                </button>
+                        <igx-icon fontSet="material" name="add"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="fab" igxRipple="white">
-                    <i class="material-icons">favorite</i>
-                </button>
+                        <igx-icon fontSet="material" name="favorite"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="fab" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">
-                    <i class="material-icons">edit</i>
-                </button>
+                        <igx-icon fontSet="material" name="edit"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="fab" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">
-                    <i class="material-icons">add</i>
-                </button>
+                        <igx-icon fontSet="material" name="add"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="fab" igxRipple="white" [disabled]="true">
-                <i class="material-icons">favorite</i>
-                </button>
+                        <igx-icon fontSet="material" name="favorite"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="fab" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C" [disabled]="true">
-                    <i class="material-icons">edit</i>
-                </button>
+                        <igx-icon fontSet="material" name="edit"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="fab" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow" [disabled]="true">
-                    <i class="material-icons">add</i>
-                </button>
+                        <igx-icon fontSet="material" name="add"></igx-icon>
+                    </button>
                 </div>
             </div>
         </article>
@@ -129,48 +129,48 @@
             <div class="buttons-sample">
                 <div class="button-sample">
                     <button igxButton="icon" igxRipple igxRippleCentered="true">
-                    <i class="material-icons">search</i>
-                </button>
+                        <igx-icon fontSet="material" name="search"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="icon" igxRipple igxButtonColor="#E41C77" igxRippleCentered="true">
-                    <i class="material-icons">favorite</i>
-                </button>
+                        <igx-icon fontSet="material" name="favorite"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="icon" igxRipple igxRippleCentered="true">
-                    <i class="material-icons">more_vert</i>
-                </button>
+                        <igx-icon fontSet="material" name="more_vert"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="icon" igxButtonColor="white" igxButtonBackground="#E41D78" igxRipple="white" igxRippleCentered="true">
-                    <i class="material-icons">search</i>
-                </button>
+                        <igx-icon fontSet="material" name="search"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="icon" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C" igxRippleCentered="true">
-                    <i class="material-icons">favorite</i>
-                </button>
+                        <igx-icon fontSet="material" name="favorite"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="icon" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow" igxRippleCentered="true">
-                    <i class="material-icons">more_vert</i>
-                </button>
+                        <igx-icon fontSet="material" name="more_vert"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="icon" igxRipple igxRippleCentered="true" [disabled]="true">
-                    <i class="material-icons">search</i>
-                </button>
+                        <igx-icon fontSet="material" name="edit"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="icon" igxRipple igxButtonColor="#E41C77" igxRippleCentered="true" [disabled]="true">
-                    <i class="material-icons">favorite</i>
-                </button>
+                        <igx-icon fontSet="material" name="favorite"></igx-icon>
+                    </button>
                 </div>
                 <div class="button-sample">
                     <button igxButton="icon" igxRipple igxRippleCentered="true" [disabled]="true">
-                    <i class="material-icons">more_vert</i>
-                </button>
+                        <igx-icon fontSet="material" name="more_vert"></igx-icon>
+                    </button>
                 </div>
             </div>
         </article>
