--- a/demos/app/card/sample.component.html
+++ b/demos/app/card/sample.component.html
@@ -23,8 +23,8 @@
                 <igx-card-actions>
                     <div class="igx-card-actions__igroup--end">
                         <span igxButton="icon" igxRipple igxRippleCentered="true" *ngFor="let icon of cards[0].icons">
-                        <i class="material-icons">{{ icon }}</i>
-                    </span>
+                            <igx-icon fontSet="material" [name]="icon"></igx-icon>
+                        </span>
                     </div>
                 </igx-card-actions>
             </igx-card>
@@ -59,8 +59,8 @@
                 <igx-card-actions>
                     <div class="igx-card-actions__igroup--start">
                         <span igxButton="icon" igxRipple igxRippleCentered="true" *ngFor="let icon of cards[5].icons">
-                        <i class="material-icons">{{ icon }}</i>
-                    </span>
+                            <igx-icon fontSet="material" [name]="icon"></igx-icon>
+                        </span>
                     </div>
                     <div class="igx-card-actions__bgroup">
                         <button igxButton igxButtonColor="#0375be" igxRipple *ngFor="let button of cards[5].buttons">{{ button }}</button>
@@ -79,8 +79,8 @@
                 <igx-card-actions>
                     <div class="igx-card-actions__igroup--end">
                         <span igxButton="icon" igxRipple igxRippleCentered="true" *ngFor="let icon of cards[1].icons">
-                        <i class="material-icons">{{ icon }}</i>
-                    </span>
+                            <igx-icon fontSet="material" [name]="icon"></igx-icon>
+                        </span>
                     </div>
                 </igx-card-actions>
             </igx-card>
@@ -119,8 +119,8 @@
                 <igx-card-actions>
                     <div class="igx-card-actions__igroup--start">
                         <span igxButton="icon" igxRipple igxRippleCentered="true" *ngFor="let icon of cards[6].icons">
-                        <i class="material-icons">{{ icon }}</i>
-                    </span>
+                            <igx-icon fontSet="material" [name]="icon"></igx-icon>
+                        </span>
                     </div>
                     <div class="igx-card-actions__bgroup">
                         <button igxButton igxButtonColor="#0375be" igxRipple *ngFor="let button of cards[6].buttons">{{ button }}</button>
