--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -185,7 +185,7 @@ $badge-font-size: em(10px) !default;
 $badge-font-weight: 600 !default;
 $badge-shadow: $elevate-1 !default;
 $badge-line-height: 2px !default;
-$badge-icon-font-size: em(10px, 10px) !default;
+$badge-icon-font-size: em(10px) !default;
 $badge-value-padding: 4px !default;
 
 // 3. Buttons //
@@ -247,11 +247,11 @@ $button-floating-shadow: $elevate-6 !default;
 $button-floating-hover-shadow: $elevate-12 !default;
 $button-floating-background: palette(secondary) !default;
 // Icon Buttons
-$button-icon-width: em(28px, 16px) !default;
+$button-icon-width: em(36px, 16px) !default;
 $button-icon-height: $button-icon-width !default;
 $button-icon-hover-background: $off-white !default;
 $button-icon-focus-background: $lightgray, .5 !default;
-$button-icon-font-size: em(24px, 16px) !default;
+$button-icon-font-size: em(24px, 24px) !default;
 // Navbar Buttons
 $button-navbar-width: em(24px, 16px) !default;
 $button-navbar-height: $button-navbar-width !default;
