--- a/src/themes/material/modules/_index.scss
+++ b/src/themes/material/modules/_index.scss
@@ -1,6 +1,6 @@
 @import 'titillium';
 @import 'typography';
-@import 'material_icons';
+// @import 'material_icons';
 
 @import 'buttons';
 @import 'inputs';
