--- a/demos/app/progressbar/sample.component.html
+++ b/demos/app/progressbar/sample.component.html
@@ -102,7 +102,7 @@
 
     <div class="button-container">
         <button igxButton="fab" igxRipple="" (click)="generateNewProgressValues()">
-            <i class="material-icons">refresh</i>
+            <igx-icon fontSet="material" name="refresh"></igx-icon>
         </button>
     </div>
 </div>
