--- a/src/buttonGroup/buttongroup-content.component.html
+++ b/src/buttonGroup/buttongroup-content.component.html
@@ -1,22 +1,13 @@
-<div class="igx-button-group" role="group"
-[class.igx-button-group--vertical]="_isVertical">
+<div class="igx-button-group" role="group" [class.igx-button-group--vertical]="_isVertical">
 
-    <span class="igx-button-group__item" *ngFor="let button of values; let i = 'index'" type="button"
-        (click)="_clickHandler($event, i)"
-        igxButton="flat"
-        [attr.data-selected]="button.selected"
-        [attr.data-togglable]="button.togglable"
-        [attr.aria-pressed]="button.selected"
-        [disabled]="disabled || button.disabled"
-        [igxButtonColor]="button.color"
-        [igxButtonBackground]="button.bgcolor"
-        [igxLabel]="button.label"
-        [igxRipple]="button.ripple"
-        [class.igx-button-group__item--selected]="button.selected">
+    <span class="igx-button-group__item" *ngFor="let button of values; let i = 'index'" type="button" (click)="_clickHandler($event, i)"
+        igxButton="flat" [attr.data-selected]="button.selected" [attr.data-togglable]="button.togglable" [attr.aria-pressed]="button.selected"
+        [disabled]="disabled || button.disabled" [igxButtonColor]="button.color" [igxButtonBackground]="button.bgcolor" [igxLabel]="button.label"
+        [igxRipple]="button.ripple" [class.igx-button-group__item--selected]="button.selected">
         <div class="igx-button-group__item-content {{ itemContentCssClass }}">
-            <i *ngIf="button.icon" class="material-icons">{{button.icon}}</i>
+            <igx-icon *ngIf="button.icon" fontSet="material" [name]="button.icon"></igx-icon>
             <span *ngIf="button.label">{{button.label}}</span>
-        </div>
-    </span>
-    
+</div>
+</span>
+
 </div>
