--- a/src/calendar/calendar.component.html
+++ b/src/calendar/calendar.component.html
@@ -16,14 +16,14 @@
     <div *ngIf="isDefaultView" class="igx-calendar__body" [@animateView]="activeView" (swiperight)="prevMonth()" (swipeleft)="nextMonth()">
         <div class="igx-calendar__body-picker">
             <div class="prev" (click)="prevMonth()">
-                <i class="material-icons">keyboard_arrow_left</i>
+                <igx-icon fontSet="material" name="keyboard_arrow_left"></igx-icon>
             </div>
             <div class="date">
                 <span (click)="activeViewYear()" class="date__el">{{ getMonthName(viewDate) }}</span>
                 <span (click)="activeViewDecade()" class="date__el">{{ viewDate.getFullYear() }}</span>
             </div>
             <div class="next" (click)="nextMonth()">
-                <i class="material-icons">keyboard_arrow_right</i>
+                <igx-icon fontSet="material" name="keyboard_arrow_right"></igx-icon>
             </div>
         </div>
 
@@ -32,13 +32,12 @@
                 {{ dayName }}
             </span>
         </div>
-        <div *ngFor="let week of getCalendarMonth; trackBy:rowTracker" class="igx-calendar__body-row" (click)="onDateClick($event)" [@animateChange]="monthAction">
-            <span tabindex="0" *ngFor="let day of week; trackBy:dateTracker"
-                [attr.data-prevmonth]="day.isPrevMonth ? true : null" [attr.data-nextmonth]="day.isNextMonth ? true : null"
-                [attr.data-curmonth]="day.isCurrentMonth ? true : null"
-                [class.igx-calendar__date--inactive]="isInactive(day)" [class.igx-calendar__date]="day.isCurrentMonth && !isWeekend(day) && !isSelected(day)"
-                [class.igx-calendar__date--weekend]="isWeekend(day)" [class.igx-calendar__date--current]="isToday(day) && !isSelected(day)"
-                [class.igx-calendar__date--selected]="isSelected(day)">
+        <div *ngFor="let week of getCalendarMonth; trackBy:rowTracker" class="igx-calendar__body-row" (click)="onDateClick($event)"
+            [@animateChange]="monthAction">
+            <span tabindex="0" *ngFor="let day of week; trackBy:dateTracker" [attr.data-prevmonth]="day.isPrevMonth ? true : null" [attr.data-nextmonth]="day.isNextMonth ? true : null"
+                [attr.data-curmonth]="day.isCurrentMonth ? true : null" [class.igx-calendar__date--inactive]="isInactive(day)"
+                [class.igx-calendar__date]="day.isCurrentMonth && !isWeekend(day) && !isSelected(day)" [class.igx-calendar__date--weekend]="isWeekend(day)"
+                [class.igx-calendar__date--current]="isToday(day) && !isSelected(day)" [class.igx-calendar__date--selected]="isSelected(day)">
                 {{ day.date.getDate() }}
             </span>
         </div>
@@ -47,8 +46,7 @@
 
     <div *ngIf="isYearView" class="igx-calendar__body" [@animateView]="activeView">
         <div class="igx-calendar__body-row--wrap" (click)="changeMonth($event)">
-            <div [attr.data-index]="i" *ngFor="let month of getYear();trackBy:monthTracker; let i = index;"
-                [class.igx-calendar__month]="!isCurrentMonth(month)"
+            <div [attr.data-index]="i" *ngFor="let month of getYear();trackBy:monthTracker; let i = index;" [class.igx-calendar__month]="!isCurrentMonth(month)"
                 [class.igx-calendar__month--current]="isCurrentMonth(month)">
                 {{ getMonthName(month) }}
             </div>
