--- a/src/carousel/carousel.component.html
+++ b/src/carousel/carousel.component.html
@@ -1,20 +1,17 @@
 <div tabindex="1" aria-label="carousel" (mouseenter)="stop()" (mouseleave)="play()" (keydown)="($event)" class="igx-carousel">
     <ul class="igx-carousel__indicators" [hidden]="slides.length <= 1">
-        <li *ngFor="let slide of slides" [attr.aria-label]="setAriaLabel(slide)" [attr.aria-selected]="slide.active" [class.active]="slide.active === true" (click)="select(slide)"></li>
+        <li *ngFor="let slide of slides" [attr.aria-label]="setAriaLabel(slide)" [attr.aria-selected]="slide.active" [class.active]="slide.active === true"
+            (click)="select(slide)"></li>
     </ul>
     <div class="igx-carousel__inner" role="list">
         <ng-content></ng-content>
     </div>
     <div ng-template="ngIf navigation">
         <a role="button" tabindex="2" class="igx-carousel__arrow--prev" (click)="prev()" [hidden]="!slides.length">
-            <span>
-                <i class="material-icons">arrow_back</i>
-            </span>
+            <igx-icon fontSet="material" name="arrow_back"></igx-icon>
         </a>
         <a role="button" tabindex="3" class="igx-carousel__arrow--next" (click)="next()" [hidden]="!slides.length">
-            <span>
-                <i class="material-icons">arrow_forward</i>
-            </span>
+            <igx-icon fontSet="material" name="arrow_forward"></igx-icon>
         </a>
     </div>
 </div>
