--- a/src/icon/icon.component.scss
+++ b/src/icon/icon.component.scss
@@ -1,6 +1,7 @@
 @import "../themes/base/index";
 @import "../themes/material/manifest";
 @import "../themes/material/extends/icon";
+@import '../themes/material/modules/material_icons';
 
 @include b(igx-icon) {
     @extend %igx-icon-display;
