--- a/src/themes/material/modules/_index.scss
+++ b/src/themes/material/modules/_index.scss
@@ -1,29 +1,9 @@
+// Font styling
 @import 'titillium';
 @import 'typography';
-// @import 'material_icons';
+@import 'material_icons';
 
+// Directive styling
 @import 'buttons';
 @import 'inputs';
-// @import 'controls';
-
-// @import 'list';
-
-// @import 'tab';
-//@import 'avatar';
-//@import 'badges';
 @import 'ripple';
-// @import 'nav-drawer';
-// @import 'dialog';
-// @import 'navbar';
-// @import 'icon';
-// @import 'carousel';
-// @import 'snackbar';
-// @import 'progress';
-// @import 'card';
-// @import 'toast';
-// @import 'slider';
-// @import 'button-group';
-// @import 'grid';
-// @import 'grid-filtering';
-// @import 'calendar';
-// @import 'date-picker';
