--- a/src/calendar/calendar.component.scss
+++ b/src/calendar/calendar.component.scss
@@ -1,5 +1,5 @@
-@import "../themes/base/index";
-@import "../themes/material/manifest";
+@import "../themes/base/utilities/index";
+@import "../themes/material/config";
 @import "../themes/material/extends/calendar";
 
 @include b(igx-calendar) {
