--- a/src/icon/icon.component.scss
+++ b/src/icon/icon.component.scss
@@ -1,7 +1,6 @@
 @import "../themes/base/index";
-@import "../themes/material/manifest";
+@import "../themes/material/config";
 @import "../themes/material/extends/icon";
-@import '../themes/material/modules/material_icons';
 
 @include b(igx-icon) {
     @extend %igx-icon-display;
