--- a/src/navigation-drawer/navigation-drawer.component.scss
+++ b/src/navigation-drawer/navigation-drawer.component.scss
@@ -1,5 +1,5 @@
-@import "../themes/base/index";
-@import "../themes/material/manifest";
+@import "../themes/base/utilities/index";
+@import "../themes/material/config";
 
 // Main Navigation Drawer state styles
 @include b(ig-nav-drawer) {
