--- a/src/themes/material/modules/_material_icons.scss
+++ b/src/themes/material/modules/_material_icons.scss
@@ -6,7 +6,13 @@ $line-height: 1;
     font-family: 'Material Icons';
     font-style: normal;
     font-weight: $font-weight;
-    src: local('Material Icons'), local('MaterialIcons-Regular'), url('../../node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff2') format('woff2'), url('../../node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff') format('woff'), url('../../node_modules/material-design-icons/iconfont/MaterialIcons-Regular.ttf') format('truetype');
+    src: local('Material Icons'), local('MaterialIcons-Regular'),
+        url('../../node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff2')
+            format('woff2'),
+        url('../../node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff')
+            format('woff'),
+        url('../../node_modules/material-design-icons/iconfont/MaterialIcons-Regular.ttf')
+            format('truetype');
 }
 
 .material-icons {
