Import config from theme and index from base utilities.

--- a/src/icon/icon.component.scss
+++ b/src/icon/icon.component.scss
@@ -1,4 +1,4 @@
-@import "../themes/base/index";
+@import "../themes/base/utilities/index";
 @import "../themes/material/config";
 @import "../themes/material/extends/icon";
 
