--- a/src/themes/material/extends/_grid-filtering.scss
+++ b/src/themes/material/extends/_grid-filtering.scss
@@ -5,7 +5,7 @@
 %igx-filtering-toggle {
     z-index: 10;
 
-    & .icon {
+    i {
         font-size: $grid-head-icon-size;
         line-height: $grid-head-icon-lh;
         padding: $grid-head-icon-padding;
