--- a/demos/app/app.component.css
+++ b/demos/app/app.component.css
@@ -53,7 +53,7 @@
     flex: 1 0 100%;
     flex-flow: row nowrap;
     color: #383838;
-    height: 48px;
+    max-height: 48px;
     padding: 12px 16px;
     cursor: pointer;
     font-size: 14px;
