--- a/src/themes/material/extends/_buttons.scss
+++ b/src/themes/material/extends/_buttons.scss
@@ -136,6 +136,7 @@
     width: $button-navbar-width;
     height: $button-navbar-height;
     font-size: $button-icon-font-size;
+    color: inherit;
     padding: $button-navbar-padding;
 }
 
