refactor datePicker and add close, disable and today functionality

--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -1,6 +1,8 @@
 <div class="igx-date-picker">
-    <input class="igx-date-picker__input-date" igxInput (click)="onOpenEvent($event)" [value]="_displayData"  />
-    <igx-dialog class="igx-date-picker__dialog-popup" closeOnOutsideSelect="true">
+    <input class="igx-date-picker__input-date" igxInput (click)="_onOpenEvent($event)" [value]="displayData" [disabled]="isDisabled" />
+    <igx-dialog class="igx-date-picker__dialog-popup" closeOnOutsideSelect="true"
+        [leftButtonLabel]="cancelButtonLabel" (onLeftButtonSelect)="_handleDialogCloseAction()"
+        [rightButtonLabel]="todayButtonLabel" (onRightButtonSelect)="triggerTodaySelection()">
         <igx-calendar
             class="igx-date-picker__calendar"
             (onSelection)="handleSelection($event)"
