add demo samples for datePicker and refactor readme

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -38,6 +38,11 @@
                         <span>Carousel</span>
                     </span>
 
+                    <span class="nav-item" [routerLinkActive]="'active'" routerLink="/datePicker">
+                        <igx-icon fontSet="material" name="date_range"></igx-icon>
+                        <span>DatePicker</span>
+                    </span>
+
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/grid">
                         <igx-icon fontSet="material" name="view_column"></igx-icon>
                         <span>Grid</span>
