--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -5,6 +5,7 @@
             <aside class="aside">
                 <nav class="nav">
                     <img class="logo" src="demos/app/rsrcs/jsblocks-logo.svg" alt="Ignite UI JS Blocks Logo">
+
                     <!--Components-->
                     <span class="nav-item header">Components</span>
 
@@ -81,6 +82,11 @@
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/slider">
                         <igx-icon fontSet="material" name="linear_scale"></igx-icon>
                         <span>Slider</span>
+                    </span>
+
+                    <span class="nav-item" [routerLinkActive]="'active'" routerLink="/scroll">
+                        <igx-icon fontSet="material" name="swap_vert"></igx-icon>
+                        <span>Scroll</span>
                     </span>
 
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/snackbar">
