--- a/demos/app/date-picker/sample.component.html
+++ b/demos/app/date-picker/sample.component.html
@@ -11,21 +11,21 @@
             <h4 class="sample-title">Default Date Picker.</h4>
             <p class="sample-description">Detailed description to be added.</p>
             <div class="preview">
-                 <igx-datePicker></igx-datePicker> 
+                <igx-datePicker cancelButtonLabel="cancel" todayButtonLabel="today"></igx-datePicker>
             </div>
         </article>
         <article class="datepicker-column">
             <h4 class="sample-title">Date Picker with passed date.</h4>
             <p class="sample-description">Detailed description to be added.</p>
             <div class="preview">
-                 <igx-datePicker [value]="date"></igx-datePicker> 
+                <igx-datePicker [value]="date"></igx-datePicker>
             </div>
         </article>
         <article class="datepicker-column">
             <h4 class="sample-title">Date Picker with passed date and custom formatter.</h4>
             <p class="sample-description">Detailed description to be added.</p>
             <div class="preview">
-                 <igx-datePicker [value]="date" [formatter]="formatter"></igx-datePicker> 
+                <igx-datePicker [value]="date" [formatter]="formatter"></igx-datePicker>
             </div>
         </article>
     </section>
