--- a/src/themes/material/extends/_date-picker.scss
+++ b/src/themes/material/extends/_date-picker.scss
@@ -1,12 +1,13 @@
 %date-picker-display {
     max-width: 340px;
     min-width: 320px;
+    padding: 0;
 }
 
 %date-picker-content {
     width: 100%;
-    padding: initial;
-    color: initial;
+    padding: 0;
+    color: inherit;
     font-size: initial;
     line-height: initial;
 }
